--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>app1</title>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>app1</title><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black-translucent><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel="shortcut icon" href=./favicon.ico><link href=./static/css/app.fd56b1ae3167b59c9e2b8330224c456b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.2a66bbd2edd6ab182992.js></script><script type=text/javascript src=./static/js/vendor.f1c4a9d95a8a4ea24bad.js></script><script type=text/javascript src=./static/js/app.a3b4f0808e7d1a88f9ff.js></script></body></html>
